syntax = "proto3";

package openid4vci;

service CredentialIssuerService {
    rpc CreateCredentialOffer (CreateCredentialOfferRequest) returns (CreateCredentialOfferResponse);
    rpc EvaluateCredentialRequest (EvaluateCredentialRequestRequest) returns (EvaluateCredentialRequestResponse);
    rpc PreEvaluateCredentialRequest (PreEvaluateCredentialRequestRequest) returns (PreEvaluateCredentialRequestResponse);
}

message CreateCredentialOfferRequest {
  bytes issuer_metadata = 1;
  bytes credentials = 2;
  optional string credential_offer_endpoint = 3;
  optional bytes authorized_code_flow = 4;
  optional bytes pre_authorized_code_flow = 5;
}

message CreateCredentialOfferResponse {
  bytes credential_offer = 1;
  bytes credential_offer_url = 2;
}

message PreEvaluateCredentialRequestRequest {
  bytes credential_request = 1; 
}

message PreEvaluateCredentialRequestResponse {
  optional string did = 1; 
}

message EvaluateCredentialRequestRequest {
  bytes issuer_metadata = 1; 
  bytes credential_request = 2;
  optional bytes credential_offer = 3;
  optional bytes authorization_server_metadata = 4;
  optional bytes did_document = 5;
}

message EvaluateCredentialRequestResponse {
  optional bytes proof_of_possession = 1;
}

