syntax = "proto3";

package openid4vci;

// Struct mapping the `issuer_metadata` as defined in section 10.2.3 of the openid4vci specification.
message CredentialIssuerMetadata {
  // The Credential Issuer's identifier
  string credential_issuer = 1;

  // Identifier of the OAuth 2.0 Authorization Server the Credential Issuer relies on for authorization.
  // If this element is omitted, the entity providing the Credential Issuer is also acting as the AS.
  // The Credential Issuer's identifier is used as the OAuth 2.0 Issuer value to obtain the Authorization Server metadata.
  optional string authorization_server = 2;

  // URL of the Credential Issuer's Credential Endpoint.
  string credential_endpoint = 3;

  // URL of the Credential Issuer's Batch Credential Endpoint.
  // If omitted, the Credential Issuer does not support the Batch Credential Endpoint.
  optional string batch_credential_endpoint = 4;

  // A JSON array containing a list of JSON objects, each representing metadata about a separate credential type.
  // NOTE: You can't really have dynamic properties in protobuf, and the type of each entry in credentials_supported changes
  // based on the value of the `format` field. So we just use a serialized JSON object here.
  repeated bytes credentials_supported = 5;
}
